--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,31 +15,6 @@ env:
 
 jobs:
   # ========================================
-  # CHANGE DETECTION
-  # ========================================
-  changes:
-    name: Detect Changes
-    runs-on: ubuntu-latest
-    outputs:
-      backend: ${{ steps.filter.outputs.backend }}
-      frontend: ${{ steps.filter.outputs.frontend }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Check for changes
-        uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            backend:
-              - 'backend/**'
-              - '.github/workflows/ci.yml'
-            frontend:
-              - 'frontend/**'
-              - '.github/workflows/ci.yml'
-
-  # ========================================
   # BACKEND JOBS
   # ========================================
 
@@ -47,8 +22,6 @@ jobs:
   backend-lint:
     name: Backend - Lint & Format
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.backend == 'true'
     defaults:
       run:
         working-directory: backend
@@ -89,8 +62,6 @@ jobs:
   backend-security:
     name: Backend - Security Scan
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.backend == 'true'
     defaults:
       run:
         working-directory: backend
@@ -137,8 +108,6 @@ jobs:
   backend-test:
     name: Backend - Tests
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.backend == 'true'
     defaults:
       run:
         working-directory: backend
@@ -188,8 +157,6 @@ jobs:
   frontend-lint:
     name: Frontend - Lint & Type Check
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.frontend == 'true'
     defaults:
       run:
         working-directory: frontend
@@ -217,8 +184,6 @@ jobs:
   frontend-test:
     name: Frontend - Tests
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.frontend == 'true'
     defaults:
       run:
         working-directory: frontend
@@ -242,8 +207,7 @@ jobs:
   frontend-build:
     name: Frontend - Build
     runs-on: ubuntu-latest
-    needs: [changes, frontend-lint, frontend-test]
-    if: needs.changes.outputs.frontend == 'true'
+    needs: [frontend-lint, frontend-test]
     defaults:
       run:
         working-directory: frontend
@@ -279,8 +243,8 @@ jobs:
   docker-backend:
     name: Backend - Docker Build & Push to ECR
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && needs.changes.outputs.backend == 'true'
-    needs: [changes, backend-lint, backend-security, backend-test]
+    if: github.event_name == 'pull_request'
+    needs: [backend-lint, backend-security, backend-test]
     permissions:
       id-token: write
       contents: read
@@ -342,8 +306,8 @@ jobs:
   deploy-ecs:
     name: Backend - Deploy to ECS
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && needs.changes.outputs.backend == 'true'
-    needs: [changes, backend-lint, backend-security, backend-test]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: [backend-lint, backend-security, backend-test]
     permissions:
       id-token: write
       contents: read
