--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -313,7 +313,7 @@ jobs:
       contents: read
     env:
       ECS_CLUSTER_NAME: ${{ secrets.ECS_CLUSTER_NAME }}
-      ECS_SERVICE_NAME_NAME: ${{ secrets.ECS_SERVICE_NAME }}
+      ECS_SERVICE_NAME: ${{ secrets.ECS_SERVICE_NAME }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
